# repmgr

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  CREDITS  FAILOVER.rst  FAQ.md  HISTORY  INSTALL  Makefile  Makefile.global.in  Makefile.in  OLD-README.rst  PACKAGES.md  QUICKSTART.md  QUICKSTART.rst  README  README.md  README.phase2  README.rst  README_CH.md  SSH-RSYNC.md  TODO  TODO.md  autofailover_quick_setup.rst  bdr_api_version.h  check_dir.c  check_dir.h  compat.c  compat.h  config.c  config.h  config.h.in  configdata.c  configfile-scan.l  configfile.c  configfile.h  configure  configure.in  controldata.c  controldata.h  (+85 more)
.github/: CODEOWNERS
.github/workflows/: blackduck-scan.yml  sonarqube-scan.yml
.github/workflows/sonarqube/: configure-env.sh
RHEL/: repmgr.spec  repmgr3-93.spec  repmgrd.init  repmgrd.logrotate  repmgrd.sysconfig
RHEL/repmgr-2.x/: repmgr.spec
RHEL/repmgr-3.x/REL9_3/: repmgr.spec  repmgrd.init  repmgrd.sysconfig
contrib/: convert-config.pl
debian/: repmgr.repmgrd.default  repmgr.repmgrd.init
debian/DEBIAN/: control
doc/: .gitignore  Makefile  Makefile.in  appendix-faq.sgml  appendix-faq.xml  appendix-packages.sgml  appendix-packages.xml  appendix-release-notes.sgml  appendix-release-notes.xml  appendix-signatures.sgml  appendix-signatures.xml  appendix-support.sgml  appendix-support.xml  bdr-failover.md  bookindex.sgml  changes-in-repmgr4.md  cloning-standbys.sgml  cloning-standbys.xml  command-reference.sgml  configuration-file-log-settings.sgml  configuration-file-log-settings.xml  configuration-file-optional-settings.xml  configuration-file-required-settings.sgml  configuration-file-required-settings.xml  configuration-file-service-commands.sgml  configuration-file-service-commands.xml  configuration-file-settings.sgml  configuration-file.sgml  configuration-file.xml  configuration-password-management.xml  configuration-permissions.xml  configuration-service-commands.sgml  configuration.sgml  configuration.xml  configuring-witness-server.sgml  event-notifications.sgml  event-notifications.xml  filelist.sgml  filelist.xml  follow-new-primary.sgml  (+93 more)
docs/: repmgrd-failover-mechanism.md  repmgrd-node-fencing.md
expected/: repmgr_extension.out  repmgr_funcs.out  repmgr_test.out
redhat/: README.rst  repmgr.spec
scripts/: bdr-pgbouncer.sh
sql/: .gitignore  Makefile  repmgr2_repmgr3.sql  repmgr3.0_repmgr3.1.sql  repmgr3.1.1_repmgr3.1.2.sql  repmgr3.1.3_repmgr3.1.4.sql  repmgr_extension.sql  repmgr_funcs.c  repmgr_funcs.sql.in  repmgr_test.sql  uninstall_repmgr_funcs.sql
sql_utils/: Makefile  repmgr_wrapper_funcs.c  repmgr_wrapper_funcs.sql.in  uninstall_repmgr_wrapper_funcs.sql
